# mai307_prog

ScrumBoard/: README.md
ScrumBoard/data/: board.xml
ScrumBoard/include/: ScrumBoard.h
ScrumBoard/src/: ScrumBoard.cpp  main.cpp
ScrumBoard/tests/: ScrumBoardTests.cpp
course_project_Ars/: .gitignore  CMakeLists.txt
course_project_Ars/include/: Developer.h  ScrumBoard.h  Task.h
course_project_Ars/src/: ScrumBoard.cpp  main.cpp
course_project_Ars/tests/: ScrumBoardTests.cpp
ПЗ/: .gitattributes  .gitignore  circle_structure.cpp  point_in_fig.cpp  point_structure.cpp  pz1_task1.cpp  pz1_task2.cpp  pz1_task4.cpp  square.cpp
ПЗ/images/: main.cpp  results.csv
ПЗ/images/pgm_images/: Avia.pgm  Yakovlev.pgm
ПЗ/pz0_figures/: circle_structure.cpp  intersection_of_shapes.cpp
ПЗ/pz1/: pz1_task2.cpp
ПЗ/pz1_classes/: pz1_task3.cpp
ПЗ/pz2_images/: README.md  review.txt
ПЗ/pz2_images/pgm_images/: Brigada.pgm  Siberia.pgm  Walk.pgm
ПЗ/pz3_Inheritance/: pz3_task1.cpp  pz3_task2.cpp  pz3_task3.cpp  pz3_task4.cpp
ПЗ/pz4_polymorphism/: main.cpp
ПЗ/pz5_exceptions/: main.cpp
ПЗ/pz9_templates/: main.cpp
